# will_it_dissolve

./: .gitignore  Cargo.toml  README.md
.rpm/: will_it_dissolve.spec
assets/config/: config.ron
assets/levels/: level_1.ron  level_10.ron  level_11.ron  level_12.ron  level_13.ron  level_2.ron  level_3.ron  level_4.ron  level_5.ron  level_6.ron  level_7.ron  level_8.ron  level_9.ron
assets/ron/: config.ron
assets/shader/: level_change.frag
src/: assets.rs  button.rs  constants.rs  main.rs  managers.rs  models.rs  tile.rs  utils.rs
src/managers/: levelmanager.rs  tilemanager.rs
src/models/: config.rs  crossover.rs  level.rs  mod.rs
src/scenes/: game.rs  manager.rs  menu.rs  mod.rs  title.rs
src/utils/: animation.rs  mod.rs  mouse.rs  particle.rs  timer.rs  tween.rs
