[package]
name = "will_it_dissolve"
description = "brain game"
version = "0.1.0"
build = "build.rs"
authors = ["puppetmaster <github@puppetmaster.ch>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
tetra = { git = "https://github.com/17cupsofcoffee/tetra.git", tag = "0.2.18" }

# random
rand = "0.6"
rand_core = "0.2.2"

# logging
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.0"

# error
color-backtrace = { version = "0.1" }

# ron
ron = "0.5"
serde = { version = "1", features = ["serde_derive"] }

[build-dependencies]
winres = "0.1"
image = "0.21.1"

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
overflow-checks = false
incremental = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package.metadata.deb]
depends = "libasound2 (>= 1.1.3)"
extended-description = """
2D puzzle game.

Original made for Open Jam 19.

jam page : https://itch.io/jam/open-jam-2019

source   : https://github.com/puppetmaster-/will_it_dissolve

"""
section = "games"

[package.metadata.winres]
OriginalFilename = "will_it_dissolve.exe"
LegalCopyright = "Copyright © 2019 Christian Fisch"

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
will_it_dissolve = { path = "/usr/bin/will_it_dissolve" }
